themes/chameleon/source/css/typing.css
/* ... */
.footer-content {
  margin: 0 auto;
  text-align: left;
}

.footer-links {
  font-size: 0.9em;
  padding: 0;
}

.footer-links a {
  text-decoration: none;
}

.footer-links li {
  margin-right: 1em;
}

/* Wrap count in brackets */
span.index-list-count:before {
  content: ' (';
}

span.index-list-count:after {
  content: ')';
}

.home-body {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.home {
  font-weight: lighter;
  line-height: 1.4;
  text-align: center;
  position: relative;
}

.home a {
  border-bottom: 1px solid #e6e6e6;
}

.home a:hover {
  border-bottom: 1px solid white;
}

.home .content {
  width: 60%;
  position: relative;
  margin: 0 auto;
}

.home li {
  list-style: none;
}

.home .profile {
  width: 100%;
}

.home .profile h1 {
  font-weight: 300;
}

/* https://jrl.ninja/etc/1/ */
.archive-container,
.category-container,
.tag-container {
  position: relative;
  font-size: 1em;
  max-width: 80ch;
  padding: 2ch;
  margin: auto;
}

.archive-container article,
.category-container article,
.tag-container article {
  margin-bottom: 1em;
  line-height: 1em;
}

.archive-container a,
.archive-container a:hover,
.category-container a,
.category-container a:hover,
.tag-container a,
.tag-container a:hover {
  border: 0;
}

.archive-container .header,
.category-container .header,
.tag-container .header,
.article .header {
  font-size: 1.1em;
}

.archive-container .archive-article-header > a,
.archive-container .archive-article-header > h1,
.category-container .archive-article-header > a,
.category-container .archive-article-header > h1,
.tag-container .archive-article-header > a,
.tag-container .archive-article-header > h1 {
  vertical-align: middle;
}

.archive-container .archive-article-header h1,
.category-container .archive-article-header h1,
.tag-container .archive-article-header h1 {
  font-size: 1.2em;
  margin: 0;
}

.archive-container .archive-article-date,
.category-container .archive-article-date,
.tag-container .archive-article-date {
  font-size: 0.8em;
  color: #cacdd0;
}

.archive-container .extend,
.archive-container .page-number,
.category-container .extend,
.category-container .page-number,
.tag-container .extend,
.tag-container .page-number {
  margin-right: 1em;
}

.article {
  max-width: 80ch;
  padding: 2ch;
  margin: auto;
  position: relative;
}

.article .main-nav-link:hover {
  border: 0;
}

.article .caption {
  color: #cacdd0;
  display: block;
  text-align: center;
}

.article .article-entry {
  word-break: break-word;
}

.article .article-entry a {
  border-bottom: 1px solid #1abc9c;
}

.article .article-entry a:hover {
  border-bottom: none;
}

.article .article-entry img {
  display: block;
  margin: auto;
  margin-bottom: 0.5em;
  max-height: 30em;
}

.article .article-entry blockquote footer {
  text-align: center;
  font-size: 80%;
  color: #cacdd0;
}

.article .article-entry blockquote footer cite {
  font-style: italic;
}

.article .article-entry blockquote footer cite a {
  color: #cacdd0;
  border-bottom: 1px solid #eee;
}

.article .article-entry blockquote footer cite:before {
  content: "—";
  padding: 0 0.5em;
}

.article .article-entry blockquote footer strong {
  color: #cacdd0;
  font-weight: 400;
}

.article .article-entry table caption,
.article .article-entry table td,
.article .article-entry table th,
.article .article-entry td,
.article .article-entry th {
  word-break: normal;
}

.article .article-entry .pullquote {
  width: 45%;
  border: 0;
}

.article .article-entry .pullquote.left {
  float: left;
  text-align: left;
}

.article .article-entry .pullquote.right {
  float: right;
  text-align: right;
}

.article .article-entry .video-container {
  position: relative;
  padding-top: 56.25%;
  margin-bottom: 1em;
  height: 0;
  overflow: hidden;
}

.article .article-entry .video-container iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  margin-top: 0;
}

.article .article-nav {
  max-width: 100%;
}

.article .article-nav-link-wrap {
  display: inline-block;
  padding: 0 1em;
  width: 49%;
  box-sizing: border-box;
  vertical-align: top;
  border: 0;
}

.article .article-nav-link-wrap strong {
  color: #cacdd0;
}

.article .article-nav-link-wrap:hover {
  border-bottom: 0;
}

.article .article-nav-link-wrap.newer {
  text-align: right;
}

.article .article-nav-link-wrap.older {
  text-align: left;
}

.article .article-meta {
  color: #cacdd0;
  font-size: 0.9em;
  list-style: none;
  margin: 0;
  padding: 0;
}

.article .article-meta .label {
  margin-right: 0.5em;
}

.article .article-meta .article-category,
.article .article-meta .article-tag-list {
  display: inline-block;
  margin: 0;
  padding: 0;
}

.article .article-meta .article-tag-list-item {
  display: inline-block;
  margin-right: 1em;
}

.article .article-meta .article-tag-list-item:before {
  content: "#";
}

.article .article-gallery img {
  width: 100%;
}

.article-type-page .article-footer {
  display: none;
}

table caption,
table td,
td {
  border: 1px solid #ddd;
}

.highlight .line.marked {
  background: #444;
}

.highlight {
  padding: 1em;
  font-size: 0.9em;
  overflow: auto;
  line-height: 1.8;
}

.highlight .gutter pre {
  color: #cacdd0;
  font-size: 0.9em;
}

.article-entry pre code {
  background: 0 0;
  text-shadow: none;
  padding: 0;
}

.highlight pre {
  border: 0;
  margin: 0;
  padding: 0;
}

.highlight table {
  margin: 0;
  width: 100%;
}

.highlight td {
  border: 0;
  padding: 0;
}

pre .comment,
pre .title,
.highlight figcaption {
  color: #8e908c;
}

highlight figcaption a {
  float: right;
}

pre .attribute,
pre .css .class,
pre .css .id,
pre .css .pseudo,
pre .html .doctype,
pre .regexp,
pre .ruby .constant,
pre .tag,
pre .variable,
pre .xml .doctype,
pre .xml .pi,
pre .xml .tag .title {
  color: #c82829;
}

pre .built_in,
pre .constant,
pre .literal,
pre .number,
pre .params,
pre .preprocessor {
  color: #f5871f;
}
/* ... */

